samples/_failures_safe/1761298333_4ec8c5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5e52c641.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_5e52c641.c:125:5: error: expected declaration or statement at end of input
  125 |     return det;
      |     ^~~~~~
